Vertex Sharp not working #64041

Closed
opened 2019-05-01 00:08:21 +02:00 by Ingmar Franz · 5 comments

Windows 8.1, 64Bit

Blender Version
Broken: Blender 2.80, 22cc69ace8, 2019-04-30
Worked: Blender 2.79

Activating Vertex sharp doesn't prevent shading around vertex from beeing smoothed when Auto Smooth is active

Add an UV-sphere, set shading in object mode to smooth, activate auto smooth (Angle 180), go to edit mode, select one vertex and select mesh/shading/vertex sharp. Nothing happens.

Selecting two connected vertices and selecting vertex sharp marks the edge as sharp and changes the shading. The quick tip of vertex sharp and vertex smooth refers to (un)marking edgesas sharp.

Windows 8.1, 64Bit **Blender Version** Broken: Blender 2.80, 22cc69ace8d4, 2019-04-30 Worked: Blender 2.79 Activating Vertex sharp doesn't prevent shading around vertex from beeing smoothed when Auto Smooth is active Add an UV-sphere, set shading in object mode to smooth, activate auto smooth (Angle 180), go to edit mode, select one vertex and select mesh/shading/vertex sharp. Nothing happens. Selecting two connected vertices and selecting vertex sharp marks the edge as sharp and changes the shading. The quick tip of **vertex sharp** and **vertex smooth** refers to (un)marking **edges**as sharp.
Author

Added subscriber: @IngmarFranz

Added subscriber: @IngmarFranz

Added subscribers: @mont29, @ZedDB

Added subscribers: @mont29, @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-05-02 11:57:38 +02:00

Seems like in 2.79 marking a vertex as sharp marks the connected edges as sharp too. However in 2.8 nothing happens if you just do this on a single vertex.

@mont29 do you know if this is intended or not?

Seems like in 2.79 marking a vertex as sharp marks the connected edges as sharp too. However in 2.8 nothing happens if you just do this on a single vertex. @mont29 do you know if this is intended or not?

This issue was referenced by 5cd6ffad09

This issue was referenced by 5cd6ffad09a50769eb76bd8308b478a917df0ea6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64041
No description provided.