Fix T64041: Vertex Sharp not working.

Broken in rB0ac3d5f7db67 last year...